--- a/style.css
+++ b/style.css
@@ -532,3 +532,41 @@ h3{
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
+
+.container {  
+    font-family: 'Poppins', sans-serif;
+}
+  
+
+.container .mail-form {
+    background: #fff;
+    padding: 25px 35px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+        0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.container form .form-control {
+    height: 43px;
+    font-size: 15px;
+    margin-top: 5px;
+}
+
+.container .mail-form form .form-group .button {
+    font-size: 17px !important;
+}
+
+.container form .textarea {
+    height: 100px;
+    resize: none;
+    margin-top: 5px;
+}
+
+.container .mail-form h2 {
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.container .mail-form p {
+    font-size: 14px;
+}
